Ready-made notes application, password protected, it is possible to change it. Notes can be deleted and modified.

--- a/app/src/main/res/layout/activity_create_password.xml
+++ b/app/src/main/res/layout/activity_create_password.xml
@@ -17,26 +17,39 @@
         android:id="@+id/textView1"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Enter new password" />
+        android:textStyle="bold"
+        android:text="Enter new password:" />
 
     <EditText
         android:id="@+id/editTextTextPassword1"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:background="@drawable/edit_note_bg"
         android:ems="10"
-        android:inputType="textPassword" />
+        android:hint="Write your password"
+        android:inputType="textPassword"
+        android:minHeight="48dp"
+        android:paddingStart="4dp"
+        android:paddingTop="4dp" />
     <TextView
         android:id="@+id/textView2"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Confirm your password" />
+        android:textStyle="bold"
+        android:paddingTop="4dp"
+        android:text="Confirm your password:" />
 
     <EditText
         android:id="@+id/editTextTextPassword2"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:background="@drawable/edit_note_bg"
         android:ems="10"
-        android:inputType="textPassword" />
+        android:hint="Write your password again"
+        android:inputType="textPassword"
+        android:minHeight="48dp"
+        android:paddingStart="4dp"
+        android:paddingTop="4dp" />
 
     <Button
         android:id="@+id/buttonConfirm"
