--- a/app/src/main/res/layout/activity_enter_password.xml
+++ b/app/src/main/res/layout/activity_enter_password.xml
@@ -18,14 +18,21 @@
         android:id="@+id/textView"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Enter your password" />
+        android:textStyle="bold"
+        android:text="Enter your password:" />
 
     <EditText
         android:id="@+id/enterPassword"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:background="@drawable/edit_note_bg"
         android:ems="10"
-        android:inputType="textPassword" />
+        android:hint="please"
+        android:inputType="textPassword"
+        android:minHeight="48dp"
+        android:paddingStart="4dp"
+        android:paddingTop="4dp"
+        android:autofillHints="" />
 
     <Button
         android:id="@+id/buttonEnter"
