added password encryption and password recover activity

--- a/app/src/main/res/layout/activity_recover_password.xml
+++ b/app/src/main/res/layout/activity_recover_password.xml
@@ -2,7 +2,7 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/activity_enter_password"
+    android:id="@+id/activity_recover_password"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:gravity="center"
@@ -11,38 +11,32 @@
     android:paddingTop="16dp"
     android:paddingRight="16dp"
     android:paddingBottom="16dp"
-    tools:context=".EnterPasswordActivity">
+    tools:context=".RecoverPassword">
 
 
     <TextView
         android:id="@+id/textView"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Enter your password:"
+        android:text="Enter your secret word:"
         android:textStyle="bold" />
 
     <EditText
-        android:id="@+id/enterPassword"
+        android:id="@+id/enterRecoverSecretWord"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:autofillHints=""
         android:background="@drawable/edit_note_bg"
         android:ems="10"
-        android:hint="please"
-        android:inputType="textPassword"
+        android:hint="What know only you"
+        android:inputType="text"
         android:minHeight="48dp"
         android:paddingStart="4dp"
         android:paddingTop="4dp" />
 
     <Button
-        android:id="@+id/buttonEnter"
+        android:id="@+id/buttonRecover"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="ENTER" />
-
-    <Button
-        android:id="@+id/buttonForgotPassword"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="forgot password?" />
+        android:text="Recover" />
 </LinearLayout>
