--- a/app/src/main/res/layout/activity_create_password.xml
+++ b/app/src/main/res/layout/activity_create_password.xml
@@ -51,6 +51,27 @@
         android:paddingStart="4dp"
         android:paddingTop="4dp" />
 
+    <TextView
+        android:id="@+id/textView3"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:textStyle="bold"
+        android:paddingTop="4dp"
+        android:text="Enter the secret key" />
+
+    <EditText
+        android:id="@+id/editTextSecretKey"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="@drawable/edit_note_bg"
+        android:ems="10"
+        android:hint="Write here what know only you"
+        android:inputType="textPassword"
+        android:minHeight="48dp"
+        android:paddingStart="4dp"
+        android:paddingTop="4dp"
+        />
+
     <Button
         android:id="@+id/buttonConfirm"
         android:layout_width="match_parent"
