small changes, all saved in one file

--- a/app/src/main/res/layout/activity_create_password.xml
+++ b/app/src/main/res/layout/activity_create_password.xml
@@ -26,7 +26,7 @@
         android:layout_height="wrap_content"
         android:background="@drawable/edit_note_bg"
         android:ems="10"
-        android:hint="Min 6 characters, no white spaces"
+        android:hint="Min 6 characters, max 36 characters"
         android:inputType="textPassword"
         android:minHeight="48dp"
         android:paddingStart="4dp"
@@ -45,7 +45,7 @@
         android:layout_height="wrap_content"
         android:background="@drawable/edit_note_bg"
         android:ems="10"
-        android:hint="Min 6 characters, no white spaces"
+        android:hint="Min 6 characters, max 36 characters"
         android:inputType="textPassword"
         android:minHeight="48dp"
         android:paddingStart="4dp"
