added change password activity

--- a/app/src/main/res/layout/activity_change_password.xml
+++ b/app/src/main/res/layout/activity_change_password.xml
@@ -12,6 +12,28 @@
     android:paddingBottom="16dp"
     android:paddingTop="16dp">
 
+
+    <TextView
+        android:id="@+id/textView3"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:textStyle="bold"
+        android:paddingTop="4dp"
+        android:text="Enter the password to change:" />
+
+    <EditText
+        android:id="@+id/editTextActivePassword"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="@drawable/edit_note_bg"
+        android:ems="10"
+        android:hint="Your active password"
+        android:inputType="textPassword"
+        android:minHeight="48dp"
+        android:paddingStart="4dp"
+        android:paddingTop="4dp"
+        />
+
     <TextView
         android:id="@+id/textView1"
         android:layout_width="match_parent"
@@ -50,31 +72,17 @@
         android:paddingStart="4dp"
         android:paddingTop="4dp" />
 
-    <TextView
-        android:id="@+id/textView3"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:textStyle="bold"
-        android:paddingTop="4dp"
-        android:text="Enter the secret key" />
-
-    <EditText
-        android:id="@+id/editTextSecretKey"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:background="@drawable/edit_note_bg"
-        android:ems="10"
-        android:hint="Write here what know only you"
-        android:inputType="textPassword"
-        android:minHeight="48dp"
-        android:paddingStart="4dp"
-        android:paddingTop="4dp"
-        />
 
     <Button
         android:id="@+id/buttonConfirm"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="CONFIRM" />
+
+    <Button
+        android:id="@+id/buttonCancel"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="CANCEL" />
 
 </LinearLayout>
