added log in attempts, changed maxLength of all editTexts

--- a/app/src/main/res/layout/activity_create_password.xml
+++ b/app/src/main/res/layout/activity_create_password.xml
@@ -25,6 +25,7 @@
         android:layout_height="wrap_content"
         android:background="@drawable/edit_note_bg"
         android:ems="10"
+        android:maxLength="36"
         android:hint="Min 6 characters, max 36 characters"
         android:inputType="textPassword"
         android:minHeight="48dp"
@@ -44,6 +45,7 @@
         android:layout_height="wrap_content"
         android:background="@drawable/edit_note_bg"
         android:ems="10"
+        android:maxLength="36"
         android:hint="Min 6 characters, max 36 characters"
         android:inputType="textPassword"
         android:minHeight="48dp"
@@ -64,6 +66,7 @@
         android:layout_height="wrap_content"
         android:background="@drawable/edit_note_bg"
         android:ems="10"
+        android:maxLength="72"
         android:hint="Write here what know only you"
         android:inputType="textPassword"
         android:minHeight="48dp"
