--- a/app/src/main/res/layout/activity_enter_password.xml
+++ b/app/src/main/res/layout/activity_enter_password.xml
@@ -28,6 +28,7 @@
         android:background="@drawable/edit_note_bg"
         android:ems="10"
         android:hint="please"
+        android:maxLength="36"
         android:inputType="textPassword"
         android:minHeight="48dp"
         android:paddingStart="4dp"
