--- a/app/src/main/res/layout/activity_recover_password.xml
+++ b/app/src/main/res/layout/activity_recover_password.xml
@@ -27,6 +27,7 @@
         android:autofillHints=""
         android:background="@drawable/edit_note_bg"
         android:ems="10"
+        android:maxLength="72"
         android:hint="What know only you"
         android:inputType="text"
         android:minHeight="48dp"
