--- a/app/src/main/res/layout/activity_change_password.xml
+++ b/app/src/main/res/layout/activity_change_password.xml
@@ -29,6 +29,7 @@
         android:ems="10"
         android:hint="Your active password"
         android:inputType="textPassword"
+        android:maxLength="36"
         android:minHeight="48dp"
         android:paddingStart="4dp"
         android:paddingTop="4dp"
@@ -47,6 +48,7 @@
         android:layout_height="wrap_content"
         android:background="@drawable/edit_note_bg"
         android:ems="10"
+        android:maxLength="36"
         android:hint="Min 6 characters, max 36 characters"
         android:inputType="textPassword"
         android:minHeight="48dp"
@@ -66,6 +68,7 @@
         android:layout_height="wrap_content"
         android:background="@drawable/edit_note_bg"
         android:ems="10"
+        android:maxLength="36"
         android:hint="Min 6 characters, max 36 characters"
         android:inputType="textPassword"
         android:minHeight="48dp"
