--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -27,6 +27,7 @@
         android:layout_marginTop="8dp"
         android:background="@drawable/edit_note_bg"
         android:hint="Note Title"
+        android:maxLength="72"
         android:minHeight="48dp"
         android:paddingStart="4dp"
         android:autofillHints="" />
@@ -38,6 +39,7 @@
         android:layout_marginTop="8dp"
         android:inputType="textMultiLine"
         android:minLines="4"
+        android:maxLength="6000"
         android:paddingStart="4dp"
         android:background="@drawable/edit_note_bg"
         android:hint="Write in me!"
