--- a/app/src/main/res/layout/activity_recover_password.xml
+++ b/app/src/main/res/layout/activity_recover_password.xml
@@ -39,4 +39,9 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="Recover" />
+    <Button
+        android:id="@+id/buttonCancel"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Cancel" />
 </LinearLayout>
